refactor(api): ♻️ 按照架构规范重构服务安装模块
重构ServiceInstallService接口及其实现类，遵循分层架构规范：
1. 移除Service层对Result的依赖，改为返回DTO或基本类型
2. 添加DTO与Entity间的转换器类及依赖注入
3. 将QueryChain查询迁移至DAO层，使用Mapper替代
4. 完善接口方法注释，明确参数与返回值类型
5. 优化类型引用，使用统一的TypeRefs枚举

调整后的代码结构更清晰，职责更明确，符合DDD分层架构设计原则

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>